@@ -1,8 +1,9 @@
-2019-03-21
+2019-03-26
 
         * Version 1.6.0 released
         ========================
 
+        Set CTA IRF integration iterations to 6 to cope with H.E.S.S. PSF (#2860)
         Add kludge to handle incomplete Fermi-LAT source maps (#2850)
         Correct Nbgd computation in GCTAOnOffObservation for Non=0 (#2838)
         Improve OpenMP handling in GWcs::dir2pix (#2770)
